{
  "version": 4,
  "terraform_version": "0.12.12",
  "serial": 32,
  "lineage": "598dcce5-efa9-af98-ae3a-0ba545bb5829",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "tf_private_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-042b911f1fd5370ee",
            "id": "rtb-042b911f1fd5370ee",
            "owner_id": "848837873472",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tf_private"
            },
            "vpc_id": "vpc-03ff2190e20f83bcb"
          },
          "depends_on": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0537c7211c78b6e71",
            "owner_id": "848837873472",
            "tags": {
              "Name": "tf_igw"
            },
            "vpc_id": "vpc-03ff2190e20f83bcb"
          },
          "depends_on": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f6c65a73446f0c58",
            "owner_id": "848837873472",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0537c7211c78b6e71",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf_public"
            },
            "vpc_id": "vpc-03ff2190e20f83bcb"
          },
          "depends_on": [
            "aws_internet_gateway.tf_internet_gateway",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_public_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5d68a2d4280967e",
            "route_table_id": "rtb-0f6c65a73446f0c58",
            "subnet_id": "subnet-04744397dde73c4a4"
          },
          "depends_on": [
            "aws_route_table.tf_public_rt",
            "aws_subnet.tf_public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da5f387cbf9246cf",
            "route_table_id": "rtb-0f6c65a73446f0c58",
            "subnet_id": "subnet-01278c189aab99810"
          },
          "depends_on": [
            "aws_route_table.tf_public_rt",
            "aws_subnet.tf_public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_public_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:848837873472:security-group/sg-0bbd5f32c224e2dff",
            "description": "Used for access to the public instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bbd5f32c224e2dff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf_public_sg",
            "name_prefix": null,
            "owner_id": "848837873472",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-03ff2190e20f83bcb"
          },
          "depends_on": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:848837873472:subnet/subnet-04744397dde73c4a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.123.1.0/24",
            "id": "subnet-04744397dde73c4a4",
            "map_public_ip_on_launch": true,
            "owner_id": "848837873472",
            "tags": {
              "Name": "tf_public_1"
            },
            "vpc_id": "vpc-03ff2190e20f83bcb"
          },
          "depends_on": [
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:848837873472:subnet/subnet-01278c189aab99810",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.123.2.0/24",
            "id": "subnet-01278c189aab99810",
            "map_public_ip_on_launch": true,
            "owner_id": "848837873472",
            "tags": {
              "Name": "tf_public_2"
            },
            "vpc_id": "vpc-03ff2190e20f83bcb"
          },
          "depends_on": [
            "aws_vpc.tf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:848837873472:vpc/vpc-03ff2190e20f83bcb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-066b2b0465bc6b649",
            "default_route_table_id": "rtb-042b911f1fd5370ee",
            "default_security_group_id": "sg-0d55e856ebcfa521c",
            "dhcp_options_id": "dopt-328a5a59",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03ff2190e20f83bcb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-042b911f1fd5370ee",
            "owner_id": "848837873472",
            "tags": {
              "Name": "tf_vpc"
            }
          }
        }
      ]
    }
  ]
}